# Objects-detection-for-RoboCup-MSL

./: .gitignore  readme
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/nubot_common/: Angle.h  BallHandleRequest.h  BallHandleResponse.h  BallInfo.h  BallInfo3d.h  CoachInfo.h  FrontBallInfo.h  MotorInfo.h  ObstaclesInfo.h  ObstaclesInfo3d.h  OdoInfo.h  OminiVisionInfo.h  PPoint.h  PassCommands.h  Point2d.h  Point3d.h  RobotInfo.h  ShootRequest.h  ShootResponse.h  StrategyInfo.h  TargetInfo.h  VelCmd.h  WorldModelInfo.h  currentCmd.h  object_info.h  simulation_strategy.h
devel/lib/: libfreenect2-openni2.so.0  libfreenect2.so.0.2.0
devel/lib/libfreenect2/: generate_resources_tool
devel/lib/pkgconfig/: kinect2.pc  libfreenect2.pc  nubot_common.pc
devel/lib/python2.7/dist-packages/nubot_common/msg/: _Angle.py  _BallInfo.py  _BallInfo3d.py  _CoachInfo.py  _FrontBallInfo.py  _MotorInfo.py  _ObstaclesInfo.py  _ObstaclesInfo3d.py  _OdoInfo.py  _OminiVisionInfo.py  _PPoint.py  _PassCommands.py  _Point2d.py  _Point3d.py  _RobotInfo.py  _StrategyInfo.py  _TargetInfo.py  _VelCmd.py  _WorldModelInfo.py  __init__.py  _currentCmd.py  _object_info.py  _simulation_strategy.py
devel/lib/python2.7/dist-packages/nubot_common/srv/: _BallHandle.py  _Shoot.py
devel/share/common-lisp/ros/nubot_common/msg/: ObstaclesInfo3d.lisp  VelCmd.lisp  _package.lisp  _package_ObstaclesInfo3d.lisp  _package_VelCmd.lisp  _package_object_info.lisp  nubot_common-msg.asd  object_info.lisp
devel/share/kinect2/cmake/: kinect2Config.cmake
devel/share/libfreenect2/cmake/: libfreenect2Config.cmake
devel/share/nubot_common/cmake/: nubot_common-msg-extras.cmake  nubot_common-msg-paths.cmake  nubot_commonConfig.cmake
devel/share/roseus/ros/nubot_common/: manifest.l
devel/share/roseus/ros/nubot_common/msg/: ObstaclesInfo3d.l  VelCmd.l  object_info.l
src/kinect2/: AncillaryMethods.cpp  CMakeLists.txt  LaterMethods.cpp  Protonect.cpp  Protonect.h  Protonect.hpp  Protonect1.cpp  colorsegment.cpp  kinect2_driver.launch  main.cpp  package.xml  produce_pc_kernel.cu
src/kinect2/calib_file/: ROI.xml  calibration.xml  coefficients_plane.txt  tf_matrix.txt
src/kinect2/include/: AncillaryMethods.h  LaterMethods.h  colorsegment.h  kinect.h  produce_pc_kernel.h
src/libfreenect2/: CMakeLists.txt  package.xml
src/libfreenect2/depends/debs/: libglfw3-dev_3.1.2-3_armhf.deb  libglfw3_3.1.2-3_armhf.deb  libusb-1.0-0-dev_1.0.20-1_armhf.deb  libusb-1.0-0_1.0.20-1_armhf.deb  ocl-icd-libopencl1_2.2.8-1_armhf.deb  ocl-icd-opencl-dev_2.2.8-1_armhf.deb
src/libfreenect2/depends/source/: gstjpeg_src.tbz2
src/libfreenect2/examples/: CMakeLists.txt  kinect2_driver.launch  package.xml  produce_pc_kernel.cu  produce_pc_kernel.h
src/libfreenect2/include/libfreenect2/: registration.h
src/libfreenect2/src/: registration.cpp
src/nubot_common/: CMakeLists.txt  else.launch  nubot.launch
src/nubot_common/core/include/nubot/core/: Angle.hpp  Circle.hpp  DPoint.hpp  Line.hpp  PPoint.hpp  core.hpp
src/nubot_common/msgs/: VelCmd.msg
