<?xml version="1.0"?>
<package>
  <name>libfreenect2</name>
  <version>0.0.0</version>
  <description>The kinect library</description>

  <maintainer email="nubot.nudt@gmail.com">nubot</maintainer>
  <maintainer email="nubot.nudt@outlook.com">nubot</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/nubot-nudt/nubot_standalone</url>  
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>opencv2/</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>opencv2/</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
